// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText Component renders correctly with HTML passed as a value 1`] = `
<div>
  <div
    class="text--rich"
  >
    <p>
      Hello World
    </p>
  </div>
</div>
`;

exports[`RichText Component renders correctly with default props 1`] = `
<div>
  <div
    class="text--rich"
  />
</div>
`;
